<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_bg"
    tools:context=".view.DetailsFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp"/>

    <TextView
        android:id="@+id/tv_details_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        android:layout_marginTop="70dp"
        android:text="@string/temp_tv"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/tv_feel_like_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guide_right"
        app:layout_constraintTop_toBottomOf="@id/tv_details_temp"
        android:layout_margin="50dp"
        android:text="@string/feel_likes_79"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/tv_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/tv_feel_like_temp"
        android:layout_margin="50dp"
        android:text="@string/tv_cloud"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_left"
        app:layout_constraintTop_toBottomOf="@id/tv_cloud"
        android:text="@string/broken_cloud"
        android:layout_margin="35dp"
        android:textSize="30sp"
        />
    <Spinner
        android:id="@+id/sp_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Temperature"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_desc"

        />
    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_unit"
        app:layout_constraintTop_toBottomOf="@+id/sp_temp"
        app:layout_constraintStart_toStartOf="@+id/guide_left"
        app:layout_constraintEnd_toEndOf="@id/guide_right"
        android:layout_margin="30dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>